--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -2,6 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:ExViewer.Views"
+      xmlns:controls="using:ExViewer.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d"
@@ -77,10 +78,9 @@
             <RelativePanel Margin="4"
                            Grid.Row="1"
                            Grid.Column="1">
-                <Image x:Name="Category"
-                       Source="{x:Bind Gallery.Category, Mode=OneWay, Converter={StaticResource CategoryToImageConverter}}"
-                       RelativePanel.AlignLeftWithPanel="True"
-                       Stretch="None" />
+                <controls:CategoryTag x:Name="Category"
+                                      Category="{x:Bind Gallery.Category, Mode=OneWay}"
+                                      RelativePanel.AlignLeftWithPanel="True" />
                 <TextBlock x:Name="RecordCount"
                            RelativePanel.RightOf="Category"
                            RelativePanel.AlignVerticalCenterWith="Category"
