--- a/ExViewer/Views/RootContorl.xaml
+++ b/ExViewer/Views/RootContorl.xaml
@@ -8,7 +8,7 @@
              Loaded="Control_Loaded"
              xmlns:controls="using:ExViewer.Controls">
     <SplitView x:Name="sv_root"
-               Grid.Row="1">
+               Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <SplitView.Pane>
             <StackPanel>
                 <Button Style="{StaticResource NavigationBackButtonSmallStyle}"
@@ -43,7 +43,6 @@
             </StackPanel>
         </SplitView.Pane>
         <Frame x:Name="fm_inner"
-               Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
                Navigating="fm_inner_Navigating"
                Navigated="fm_inner_Navigated"
                NavigationFailed="fm_inner_NavigationFailed" />
