--- a/ExViewer/Themes/Generic.xaml
+++ b/ExViewer/Themes/Generic.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="using:ExViewer"
                     xmlns:controls="using:ExViewer.Controls"
+                    xmlns:views="using:ExViewer.Views"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="d"
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
@@ -222,7 +223,7 @@
                 Value="16" />
     </Style>
 
-    <Style  TargetType="controls:CategoryToggleButton">
+    <Style TargetType="controls:CategoryToggleButton">
         <Setter Property="IsThreeState"
                 Value="False" />
         <Setter Property="IsChecked"
